--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -9,7 +9,7 @@ jobs:
   build:
     name: Build
     runs-on: ubuntu-latest
-  
+
     steps:
       - name: Checkout repo
         uses: actions/checkout@v2
@@ -19,14 +19,14 @@ jobs:
         with:
           node-version: 16
 
-      - name: Install Dependencies
+      - name: Install dependencies
         uses: bahmutov/npm-install@v1
 
       - name: Build project
-        uses: npm run build
+        run: npm run build
 
       - name: Upload production-ready build files
-        uses: actions/uploadartifact@v2
+        uses: actions/upload-artifact@v2
         with:
           name: production-files
           path: ./dist
@@ -43,9 +43,9 @@ jobs:
         with:
           name: production-files
           path: ./dist
-        
+
       - name: Deploy to GitHub Pages
-        uses: peaceiris/actions-gh-pagesv3
-        with: 
+        uses: peaceiris/actions-gh-pages@v3
+        with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           publish_dir: ./dist
